--- a/src/output.css
+++ b/src/output.css
@@ -594,24 +594,8 @@ video {
   left: 514px;
 }
 
-.left-\[6\.77px\] {
-  left: 6.77px;
-}
-
 .top-0 {
   top: 0px;
-}
-
-.top-\[7\.91px\] {
-  top: 7.91px;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.top-2 {
-  top: 0.5rem;
 }
 
 .-z-10 {
@@ -650,6 +634,38 @@ video {
   margin-top: 72px;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-\[80px\] {
+  margin-bottom: 80px;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.mt-\[37px\] {
+  margin-top: 37px;
+}
+
 .flex {
   display: flex;
 }
@@ -682,6 +698,10 @@ video {
   height: 50%;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -690,36 +710,12 @@ video {
   height: 66.666667%;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
 .h-56 {
   height: 14rem;
 }
 
-.h-\[12\.50px\] {
-  height: 12.50px;
-}
-
-.h-\[159\.29px\] {
-  height: 159.29px;
-}
-
-.h-\[22\.76px\] {
-  height: 22.76px;
-}
-
-.h-\[30\.34px\] {
-  height: 30.34px;
-}
-
-.h-\[53\.10px\] {
-  height: 53.10px;
-}
-
-.h-\[6\.23px\] {
-  height: 6.23px;
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-\[823\.84px\] {
@@ -730,36 +726,8 @@ video {
   height: 100%;
 }
 
-.h-\[1003\.84px\] {
-  height: 1003.84px;
-}
-
-.h-\[\.84px\] {
-  height: .84px;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-\[px\] {
-  height: px;
-}
-
-.h-\[200px\] {
-  height: 200px;
-}
-
-.w-2\.5 {
-  width: 0.625rem;
+.h-\[29rem\] {
+  height: 29rem;
 }
 
 .w-2\/5 {
@@ -774,40 +742,20 @@ video {
   width: 60%;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-56 {
+  width: 14rem;
 }
 
-.w-96 {
-  width: 24rem;
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-\[171px\] {
   width: 171px;
 }
 
-.w-\[22\.76px\] {
-  width: 22.76px;
-}
-
-.w-\[242\.72px\] {
-  width: 242.72px;
-}
-
-.w-\[30\.34px\] {
-  width: 30.34px;
-}
-
-.w-\[337\.07px\] {
-  width: 337.07px;
-}
-
 .w-\[685px\] {
   width: 685px;
-}
-
-.w-\[9\.24px\] {
-  width: 9.24px;
 }
 
 .w-fit {
@@ -819,32 +767,8 @@ video {
   width: 100%;
 }
 
-.w-\[1728px\] {
-  width: 1728px;
-}
-
-.w-\[px\] {
-  width: px;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-\[398\.22px\] {
-  width: 398.22px;
-}
-
-.w-\[500px\] {
-  width: 500px;
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .max-w-2xl {
@@ -859,10 +783,6 @@ video {
   max-width: 700px;
 }
 
-.origin-top-left {
-  transform-origin: top left;
-}
-
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -870,11 +790,6 @@ video {
 
 .translate-y-6 {
   --tw-translate-y: 1.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-90 {
-  --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -909,10 +824,6 @@ video {
   flex-direction: column;
 }
 
-.flex-col-reverse {
-  flex-direction: column-reverse;
-}
-
 .place-content-end {
   place-content: end;
 }
@@ -935,10 +846,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-10 {
@@ -965,6 +872,10 @@ video {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
@@ -973,46 +884,28 @@ video {
   gap: 1.5rem;
 }
 
-.gap-7 {
-  gap: 1.75rem;
-}
-
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-\[28\.09px\] {
-  gap: 28.09px;
-}
-
-.gap-\[3\.79px\] {
-  gap: 3.79px;
 }
 
 .gap-\[58px\] {
   gap: 58px;
 }
 
-.gap-\[7\.02px\] {
-  gap: 7.02px;
-}
-
-.gap-\[7\.59px\] {
-  gap: 7.59px;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
-.gap-4 {
-  gap: 1rem;
+.gap-9 {
+  gap: 2.25rem;
 }
 
 .-space-x-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(-1.25rem * var(--tw-space-x-reverse));
   margin-left: calc(-1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .self-stretch {
@@ -1027,8 +920,8 @@ video {
   border-radius: 1rem;
 }
 
-.rounded-\[22\.76px\] {
-  border-radius: 22.76px;
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-full {
@@ -1041,42 +934,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
-.rounded-bl-\[16\.85px\] {
-  border-bottom-left-radius: 16.85px;
-}
-
-.rounded-br-\[16\.85px\] {
-  border-bottom-right-radius: 16.85px;
-}
-
-.rounded-tl-2xl {
-  border-top-left-radius: 1rem;
-}
-
-.rounded-tl-\[16\.85px\] {
-  border-top-left-radius: 16.85px;
-}
-
-.rounded-tr-2xl {
-  border-top-right-radius: 1rem;
-}
-
-.rounded-tr-\[16\.85px\] {
-  border-top-right-radius: 16.85px;
-}
-
-.rounded-br-2xl {
-  border-bottom-right-radius: 1rem;
-}
-
-.rounded-bl-2xl {
-  border-bottom-left-radius: 1rem;
 }
 
 .border {
@@ -1125,6 +982,16 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+
+.bg-ungu {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 37 104 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-40 {
@@ -1205,16 +1072,6 @@ video {
   padding-right: 2rem;
 }
 
-.px-\[22\.76px\] {
-  padding-left: 22.76px;
-  padding-right: 22.76px;
-}
-
-.px-\[30\.34px\] {
-  padding-left: 30.34px;
-  padding-right: 30.34px;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1230,44 +1087,18 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-\[15\.17px\] {
-  padding-top: 15.17px;
-  padding-bottom: 15.17px;
-}
-
 .py-\[17px\] {
   padding-top: 17px;
   padding-bottom: 17px;
 }
 
-.px-\[120px\] {
-  padding-left: 120px;
-  padding-right: 120px;
-}
-
-.py-\[90px\] {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .pb-9 {
   padding-bottom: 2.25rem;
-}
-
-.pb-\[30\.34px\] {
-  padding-bottom: 30.34px;
-}
-
-.pb-\[37\.93px\] {
-  padding-bottom: 37.93px;
-}
-
-.pb-\[5\.21px\] {
-  padding-bottom: 5.21px;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
 }
 
 .pl-8 {
@@ -1278,20 +1109,8 @@ video {
   padding-right: 7rem;
 }
 
-.pr-\[3\.54px\] {
-  padding-right: 3.54px;
-}
-
 .pt-6 {
   padding-top: 1.5rem;
-}
-
-.pt-\[22\.76px\] {
-  padding-top: 22.76px;
-}
-
-.pt-\[4\.75px\] {
-  padding-top: 4.75px;
 }
 
 .text-center {
@@ -1338,10 +1157,6 @@ video {
   font-size: 15.17px;
 }
 
-.text-\[22\.76px\] {
-  font-size: 22.76px;
-}
-
 .text-\[64px\] {
   font-size: 64px;
 }
@@ -1361,6 +1176,16 @@ video {
   line-height: 1.75rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-extrabold {
   font-weight: 800;
 }
@@ -1373,12 +1198,16 @@ video {
   font-weight: 600;
 }
 
-.capitalize {
-  text-transform: capitalize;
+.font-bold {
+  font-weight: 700;
 }
 
-.leading-7 {
-  line-height: 1.75rem;
+.font-normal {
+  font-weight: 400;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 .leading-8 {
@@ -1451,20 +1280,23 @@ video {
   color: rgb(250 204 21 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
+}
+
 .opacity-0 {
   opacity: 0;
-}
-
-.shadow-\[0px_4px_50px_0px_rgba\(152\2c 140\2c 140\2c 0\.10\)\] {
-  --tw-shadow: 0px 4px 50px 0px rgba(152,140,140,0.10);
-  --tw-shadow-colored: 0px 4px 50px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0px_2\.808887243270874px_35\.11109161376953px_0px_rgba\(0\2c 0\2c 0\2c 0\.05\)\] {
-  --tw-shadow: 0px 2.808887243270874px 35.11109161376953px 0px rgba(0,0,0,0.05);
-  --tw-shadow-colored: 0px 2.808887243270874px 35.11109161376953px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-lg {
@@ -1562,6 +1394,16 @@ video {
     padding: 4rem;
   }
 
+  .sm\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .sm\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
   .sm\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -1576,6 +1418,11 @@ video {
 @media (min-width: 768px) {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
@@ -1610,6 +1457,10 @@ video {
 
   .lg\:gap-0 {
     gap: 0px;
+  }
+
+  .lg\:p-\[90px\] {
+    padding: 90px;
   }
 
   .lg\:px-30 {
@@ -1657,6 +1508,11 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
