--- a/src/output.css
+++ b/src/output.css
@@ -566,12 +566,12 @@ video {
   position: sticky;
 }
 
-.-bottom-20 {
-  bottom: -5rem;
+.-bottom-16 {
+  bottom: -4rem;
 }
 
-.-top-16 {
-  top: -4rem;
+.-top-8 {
+  top: -2rem;
 }
 
 .bottom-0 {
@@ -588,10 +588,6 @@ video {
 
 .left-10 {
   left: 2.5rem;
-}
-
-.left-\[514px\] {
-  left: 514px;
 }
 
 .top-0 {
@@ -614,24 +610,8 @@ video {
   z-index: 20;
 }
 
-.z-\[4\] {
-  z-index: 4;
-}
-
 .m-12 {
   margin: 3rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-\[72px\] {
-  margin-top: 72px;
 }
 
 .mb-4 {
@@ -650,6 +630,10 @@ video {
   margin-bottom: 2rem;
 }
 
+.mb-\[60px\] {
+  margin-bottom: 60px;
+}
+
 .mb-\[80px\] {
   margin-bottom: 80px;
 }
@@ -662,8 +646,20 @@ video {
   margin-right: auto;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
 .mt-\[37px\] {
   margin-top: 37px;
+}
+
+.mt-\[72px\] {
+  margin-top: 72px;
 }
 
 .flex {
@@ -698,64 +694,24 @@ video {
   height: 50%;
 }
 
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
 .h-2\/3 {
   height: 66.666667%;
-}
-
-.h-56 {
-  height: 14rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-\[823\.84px\] {
-  height: 823.84px;
-}
-
-.h-full {
-  height: 100%;
 }
 
 .h-\[29rem\] {
   height: 29rem;
 }
 
-.w-2\/5 {
-  width: 40%;
+.h-full {
+  height: 100%;
 }
 
 .w-20 {
   width: 5rem;
 }
 
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-\[171px\] {
-  width: 171px;
-}
-
-.w-\[685px\] {
-  width: 685px;
+.w-\[10rem\] {
+  width: 10rem;
 }
 
 .w-fit {
@@ -767,16 +723,16 @@ video {
   width: 100%;
 }
 
-.w-\[10rem\] {
-  width: 10rem;
-}
-
 .max-w-2xl {
   max-width: 42rem;
 }
 
 .max-w-96 {
   max-width: 24rem;
+}
+
+.max-w-\[685px\] {
+  max-width: 685px;
 }
 
 .max-w-\[700px\] {
@@ -804,14 +760,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.cursor-text {
-  cursor: text;
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -836,10 +784,6 @@ video {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -856,24 +800,12 @@ video {
   gap: 0.5rem;
 }
 
-.gap-2\.5 {
-  gap: 0.625rem;
-}
-
-.gap-20 {
-  gap: 5rem;
-}
-
 .gap-24 {
   gap: 6rem;
 }
 
 .gap-3 {
   gap: 0.75rem;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .gap-5 {
@@ -888,12 +820,12 @@ video {
   gap: 2rem;
 }
 
-.gap-\[58px\] {
-  gap: 58px;
-}
-
 .gap-9 {
   gap: 2.25rem;
+}
+
+.gap-\[58px\] {
+  gap: 58px;
 }
 
 .-space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -908,20 +840,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.self-stretch {
-  align-self: stretch;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
 .rounded-2xl {
   border-radius: 1rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
 }
 
 .rounded-full {
@@ -940,29 +864,9 @@ video {
   border-width: 1px;
 }
 
-.border-\[\#dee1e9\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(222 225 233 / var(--tw-border-opacity, 1));
-}
-
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
-.bg-\[\#a12568\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(161 37 104 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#dee1e9\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(222 225 233 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#fffcfc\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 252 252 / var(--tw-bg-opacity, 1));
 }
 
 .bg-background {
@@ -974,24 +878,24 @@ video {
   background-color: rgb(31 30 37 / 0.15);
 }
 
-.bg-manggo {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 208 73 / var(--tw-bg-opacity, 1));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
 }
 
+.bg-manggo {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 208 73 / var(--tw-bg-opacity, 1));
+}
+
 .bg-ungu {
   --tw-bg-opacity: 1;
   background-color: rgb(161 37 104 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-40 {
@@ -1049,6 +953,10 @@ video {
      object-fit: cover;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -1072,6 +980,11 @@ video {
   padding-right: 2rem;
 }
 
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1087,42 +1000,13 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-\[17px\] {
-  padding-top: 17px;
-  padding-bottom: 17px;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.pb-9 {
-  padding-bottom: 2.25rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.pr-28 {
-  padding-right: 7rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .text-center {
   text-align: center;
-}
-
-.font-\[\'Inter\'\] {
-  font-family: 'Inter';
-}
-
-.font-\[\'Poppins\'\] {
-  font-family: 'Poppins';
 }
 
 .font-jakarta {
@@ -1148,17 +1032,18 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
 }
 
-.text-\[15\.17px\] {
-  font-size: 15.17px;
-}
-
-.text-\[64px\] {
-  font-size: 64px;
+.text-\[40px\] {
+  font-size: 40px;
 }
 
 .text-base {
@@ -1171,19 +1056,18 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.font-bold {
+  font-weight: 700;
 }
 
 .font-extrabold {
@@ -1194,16 +1078,12 @@ video {
   font-weight: 500;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
 .font-normal {
   font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .capitalize {
@@ -1214,47 +1094,6 @@ video {
   line-height: 2rem;
 }
 
-.leading-\[30px\] {
-  line-height: 30px;
-}
-
-.leading-\[90px\] {
-  line-height: 90px;
-}
-
-.leading-loose {
-  line-height: 2;
-}
-
-.leading-normal {
-  line-height: 1.5;
-}
-
-.text-\[\#332d2d\] {
-  --tw-text-opacity: 1;
-  color: rgb(51 45 45 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#aea6a6\] {
-  --tw-text-opacity: 1;
-  color: rgb(174 166 166 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#babec8\] {
-  --tw-text-opacity: 1;
-  color: rgb(186 190 200 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#bdbdbd\] {
-  --tw-text-opacity: 1;
-  color: rgb(189 189 189 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\#dadada\] {
-  --tw-text-opacity: 1;
-  color: rgb(218 218 218 / var(--tw-text-opacity, 1));
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
@@ -1263,21 +1102,6 @@ video {
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
-}
-
-.text-manggo {
-  --tw-text-opacity: 1;
-  color: rgb(254 208 73 / var(--tw-text-opacity, 1));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-400 {
@@ -1293,6 +1117,16 @@ video {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
+}
+
+.text-manggo {
+  --tw-text-opacity: 1;
+  color: rgb(254 208 73 / var(--tw-text-opacity, 1));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .opacity-0 {
@@ -1315,12 +1149,6 @@ video {
   --tw-backdrop-blur: blur(16px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .ease-in-out {
@@ -1371,11 +1199,6 @@ video {
   background-color: rgb(255 255 255 / 0.2);
 }
 
-.hover\:text-yellow-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(253 224 71 / var(--tw-text-opacity, 1));
-}
-
 .group:hover .group-hover\:translate-y-0 {
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1413,6 +1236,11 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1423,6 +1251,20 @@ video {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-\[45px\] {
+    font-size: 45px;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
 
@@ -1435,8 +1277,12 @@ video {
     display: flex;
   }
 
-  .lg\:w-1\/3 {
-    width: 33.333333%;
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:w-2\/5 {
+    width: 40%;
   }
 
   .lg\:grid-cols-3 {
@@ -1468,6 +1314,11 @@ video {
     padding-right: 120px;
   }
 
+  .lg\:px-\[228px\] {
+    padding-left: 228px;
+    padding-right: 228px;
+  }
+
   .lg\:py-20 {
     padding-top: 5rem;
     padding-bottom: 5rem;
@@ -1476,6 +1327,11 @@ video {
   .lg\:py-\[52px\] {
     padding-top: 52px;
     padding-bottom: 52px;
+  }
+
+  .lg\:py-\[72px\] {
+    padding-top: 72px;
+    padding-bottom: 72px;
   }
 
   .lg\:pb-\[70px\] {
@@ -1490,9 +1346,9 @@ video {
     text-align: end;
   }
 
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .lg\:text-6xl {
@@ -1505,14 +1361,43 @@ video {
     line-height: 1;
   }
 
+  .lg\:text-\[50px\] {
+    font-size: 50px;
+  }
+
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+}
 
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
+.dark\:bg-background:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 30 37 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-gradieant:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 37 104 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-gray-800:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-black:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:text-red-500:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-white:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
